add html structure and less styles for page header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
   </header>
   <div class="container home">
     <section class="page-header">
-
+      <img src="./img/fun-bus.jpg" alt="fun bus" srcset="">
+      <h2>Welcome To Fun Bus!</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias impedit illum perspiciatis. Voluptates fugiat
+        eos expedita inventore distinctio eius non natus atque quod harum adipisci dolor dicta dolores aliquid, tempora
+        ipsa optio ad aliquam culpa, ex sunt illum!
+      </p>
     </section>
     <section class="content-section">
       <div class="text-content">
